--- a/software/trunk/Cloud/src/ipc_server/conf/server.ini
+++ b/software/trunk/Cloud/src/ipc_server/conf/server.ini
@@ -5,3 +5,15 @@ max_accept_nums=1000
 timeout=10
 packet_nums=1000
 packet_size=2048
+
+[redis]
+host=127.0.0.1
+port=12306
+opt_time=10
+
+[db]
+dns=1732q0q792.iok.la
+port=3308
+username=dev
+password=dev123456789
+dbname=dev_platform
